# Multi-job-posting-CLI

./: README.md  pyproject.toml  requirements.txt
adapters/: bamboohr.py  base.py  linkedin.py  workday.py
api/: server.py  storage.py
api/bamboohr/: mock_api.py
api/bamboohr/api/bamboohr/: mock_api.py
api/linkedin/: mock_api.py
api/linkedin/api/linkedin/: mock_api.py
api/workday/: mock_api.py
api/workday/api/workday/: mock_api.py
cli/: main.py
cli/commands/: post_job.py
cli/utils/: helpers.py
examples/: posting_notebook.ipynb  sample_job.json
gui/: app.py
multi_job_posting_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
